# Escher4D

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Escher/: CMakeLists.txt
Escher/Escher4D/: Camera4.hpp  Context.h  FSQuadRenderContext.hpp  HierarchicalBuffer.hpp  MathUtil.cpp  MathUtil.hpp  Model4RenderContext.cpp  Model4RenderContext.hpp  Object4.hpp  RenderContext.hpp  Rotor4.hpp  ShadowHypervolumes.hpp  Transform4.hpp  utils.cpp  utils.hpp
Escher/Escher4D/meshes/: Geometry4.hpp  mesh_loading.cpp
examples/: CMakeLists.txt
examples/eightrooms/: CMakeLists.txt  demos.cpp  main.cpp
examples/eightrooms/res/: README.md
examples/eightrooms/res/models/: holedCube.off
examples/eightrooms/res/shaders/: deferred_frag.glsl  deferred_vert.glsl  fragment.glsl  geometry.glsl  reduction_compute.glsl  test_compute.glsl  vertex.glsl
include/: Camera4.hpp  Context.h  FSQuadRenderContext.hpp  Geometry4.hpp  HierarchicalBuffer.hpp  MathUtil.hpp  Model4RenderContext.hpp  ModelGroup.hpp  OFFLoader.hpp  Object4.hpp  RenderContext.hpp  Rotor4.hpp  ShaderProgram.hpp  ShadowHypervolumes.hpp  Transform4.hpp  utils.hpp
include/GLFW/: glfw3.h
include/glad/: glad.h
res/: README.md
res/models/: cube.ele  cube.face  cube.off  holedCube.ele  holedCube.face  holedCube.off  socket.ele  socket.face  sphere.ele  sphere.face  stool.off
res/shaders/: deferred_frag.glsl  deferred_vert.glsl  fragment.glsl  geometry.glsl  quad_frag.glsl  quad_vert.glsl  reduction_compute.glsl  test_compute.glsl  vertex.glsl
src/: MathUtil.cpp  Model4RenderContext.cpp  ShaderProgram.cpp  demos.cpp  glad.c  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  utils.cpp
